--- a/onboarding/src/semana_7/codigo_3.ipynb
+++ b/onboarding/src/semana_7/codigo_3.ipynb
@@ -846,6 +846,14 @@
     "print('\\n ---------------------------\\n')\n",
     "print(f\"Acurácia de Teste: {test_acc}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fedece7",
+   "metadata": {},
+   "source": [
+    "Percebe-se que a acurácia do modelo novo é maior que a do modelo antigo."
+   ]
   }
  ],
  "metadata": {
