--- a/onboarding/src/semana_10/transfer_learning.ipynb
+++ b/onboarding/src/semana_10/transfer_learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNfWywd9Ake4ubcrTf9Nhum",
+      "authorship_tag": "ABX9TyMfEvvUT2AfdGVfvu3yqTEa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "jXgy82vKJYi7"
       },
@@ -71,7 +71,9 @@
         "import torchvision\n",
         "from torchvision import transforms, models\n",
         "import matplotlib.pyplot as plt\n",
+        "from sklearn.metrics import f1_score, classification_report, confusion_matrix\n",
         "import numpy as np\n",
+        "import seaborn as sns\n",
         "import time"
       ]
     },
@@ -99,7 +101,7 @@
         "id": "4A9FbwiZKgEz",
         "outputId": "825b065a-61a0-4f73-dd3a-1e4a023abb26"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +142,7 @@
       "metadata": {
         "id": "hAnHlui1bem_"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -168,7 +170,7 @@
       "metadata": {
         "id": "PYy-RJyQL8Pm"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -213,7 +215,7 @@
       "metadata": {
         "id": "fSxxpNau0SRZ"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -376,7 +378,7 @@
       "metadata": {
         "id": "SDO3pA0dyLuE"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -406,7 +408,7 @@
       "metadata": {
         "id": "Ma46T-1PO16X"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -426,7 +428,7 @@
       "metadata": {
         "id": "yFTlWZxb3MqM"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -443,7 +445,7 @@
         "id": "HFUxrMxo3kV8",
         "outputId": "689981e1-e67f-4a40-c2a6-710c442a35c1"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,7 +497,7 @@
         "id": "2sq7gW8O3P4U",
         "outputId": "dad935aa-b504-4cf5-e8e7-698a7f73de47"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -561,7 +563,7 @@
         "id": "XZ4NcJKR846O",
         "outputId": "76e1e60f-3b5a-4e7f-b84c-f916efa6edc4"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -617,7 +619,7 @@
         "id": "IGb3B2RO9SaK",
         "outputId": "3c3be34a-e6fb-4f3d-d4f0-1a4fa6b0cf99"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -671,7 +673,7 @@
         "id": "9SXgnthk_8C_",
         "outputId": "5eefee9b-60aa-48a8-de22-54555331f9c7"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
